// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListArticleReplyFeedbacks filters by DB fields xxId: by appId: app2 1`] = `
Object {
  "data": Object {
    "ListArticleReplyFeedbacks": Object {
      "edges": Array [
        Object {
          "node": Object {
            "appId": "app2",
            "id": "f3",
          },
        },
        Object {
          "node": Object {
            "appId": "app2",
            "id": "f2",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticleReplyFeedbacks filters by DB fields xxId: by articleId: a1 1`] = `
Object {
  "data": Object {
    "ListArticleReplyFeedbacks": Object {
      "edges": Array [
        Object {
          "node": Object {
            "article": Object {
              "id": "a1",
              "text": "Article 1",
            },
            "id": "f2",
          },
        },
        Object {
          "node": Object {
            "article": Object {
              "id": "a1",
              "text": "Article 1",
            },
            "id": "f1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticleReplyFeedbacks filters by DB fields xxId: by replyId: r2 1`] = `
Object {
  "data": Object {
    "ListArticleReplyFeedbacks": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "f3",
            "reply": Object {
              "id": "r2",
              "text": "Reply 2",
            },
          },
        },
        Object {
          "node": Object {
            "id": "f2",
            "reply": Object {
              "id": "r2",
              "text": "Reply 2",
            },
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticleReplyFeedbacks filters by DB fields xxId: by userId: user1 1`] = `
Object {
  "data": Object {
    "ListArticleReplyFeedbacks": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "f2",
            "userId": "user1",
          },
        },
        Object {
          "node": Object {
            "id": "f1",
            "userId": "user1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticleReplyFeedbacks filters by dates: created before 2020-03-15 1`] = `
Object {
  "data": Object {
    "ListArticleReplyFeedbacks": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdAt": "2020-02-06T00:00:00.000Z",
            "id": "f2",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2020-03-06T00:00:00.000Z",
            "id": "f1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticleReplyFeedbacks filters by dates: updated after 2020-04-15 1`] = `
Object {
  "data": Object {
    "ListArticleReplyFeedbacks": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "f3",
            "updatedAt": "2020-06-06T00:00:00.000Z",
          },
        },
        Object {
          "node": Object {
            "id": "f2",
            "updatedAt": "2020-05-06T00:00:00.000Z",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticleReplyFeedbacks filters by moreLikeThis: search for: COVID19 1`] = `
Object {
  "data": Object {
    "ListArticleReplyFeedbacks": Object {
      "edges": Array [
        Object {
          "node": Object {
            "comment": "Thank you for info regarding COVID19.",
            "id": "f3",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticleReplyFeedbacks filters by vote: UPVOTE only 1`] = `
Object {
  "data": Object {
    "ListArticleReplyFeedbacks": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "f3",
            "vote": "UPVOTE",
          },
        },
        Object {
          "node": Object {
            "id": "f1",
            "vote": "UPVOTE",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticleReplyFeedbacks lists all articleReplyFeedbacks 1`] = `
Object {
  "data": Object {
    "ListArticleReplyFeedbacks": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "f3",
          },
        },
        Object {
          "node": Object {
            "id": "f2",
          },
        },
        Object {
          "node": Object {
            "id": "f1",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticleReplyFeedbacks sorts all articleReplyFeedbacks: by createdAt DESC 1`] = `
Object {
  "data": Object {
    "ListArticleReplyFeedbacks": Object {
      "edges": Array [
        Object {
          "node": Object {
            "createdAt": "2020-04-06T00:00:00.000Z",
            "id": "f3",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2020-03-06T00:00:00.000Z",
            "id": "f1",
          },
        },
        Object {
          "node": Object {
            "createdAt": "2020-02-06T00:00:00.000Z",
            "id": "f2",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticleReplyFeedbacks sorts all articleReplyFeedbacks: by score ASC, then updatedAt DESC 1`] = `
Object {
  "data": Object {
    "ListArticleReplyFeedbacks": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "f2",
            "score": -1,
            "updatedAt": "2020-05-06T00:00:00.000Z",
          },
        },
        Object {
          "node": Object {
            "id": "f3",
            "score": 1,
            "updatedAt": "2020-06-06T00:00:00.000Z",
          },
        },
        Object {
          "node": Object {
            "id": "f1",
            "score": 1,
            "updatedAt": "2020-04-06T00:00:00.000Z",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;
